--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "angular-aria": "^1.6.4",
     "angular-material": "^1.1.3",
     "angular-route": "^1.6.4",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
     "bootstrap": "^3.3.7",
+    "browserify": "^14.3.0",
     "gulp-concat": "^2.6.1",
+    "gulp-ng-annotate": "^2.0.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^2.1.2",
     "jquery": "^3.2.1",
-    "vinyl-source-stream": "^1.1.0",
-    "browserify": "^14.3.0"
+    "pump": "^1.0.2",
+    "vinyl-source-stream": "^1.1.0"
   },
   "devDependencies": {
     "@types/angular": "^1.6.14",
