--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "angular": "^1.6.4",
     "angular-animate": "^1.6.4",
     "angular-aria": "^1.6.4",
-    "angular-material": "^1.1.3",
     "angular-route": "^1.6.4",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
@@ -29,6 +28,7 @@
   },
   "devDependencies": {
     "@types/angular": "^1.6.14",
+    "@types/angular-route": "^1.3.3",
     "@types/chai": "^3.5.0",
     "@types/mocha": "^2.2.40",
     "@types/node": "^7.0.12",
