--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "bootstrap": "^3.3.7",
+    "bootswatch-sass": "^3.2.0",
     "browserify": "^14.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-flatten": "^0.3.1",
