--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "angular-animate": "^1.6.4",
     "angular-aria": "^1.6.4",
     "angular-route": "^1.6.4",
+    "angular-sanitize": "^1.6.5",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "bootstrap": "^3.3.7",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@types/angular": "^1.6.14",
     "@types/angular-route": "^1.3.3",
+    "@types/angular-sanitize": "^1.3.5",
     "@types/chai": "^3.5.0",
     "@types/mocha": "^2.2.40",
     "@types/node": "^7.0.12",
