--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/angular-route": "^1.3.3",
     "@types/angular-sanitize": "^1.3.5",
     "@types/chai": "^3.5.0",
+    "@types/jquery": "^3.2.9",
     "@types/mocha": "^2.2.40",
     "@types/node": "^7.0.12",
     "chai": "^3.5.0",
